--- a/fonts.css
+++ b/fonts.css
@@ -1,4 +1,4 @@
-font-face {
+@font-face {
     font-family: 'Pearl';
     src: url('https://hayleer88.github.io/fonts/TAN-PEARL-Regular.woff2') format('woff2'),
         url('https://hayleer88.github.io/fonts/TAN-PEARL-Regular.woff') format('woff');
@@ -23,3 +23,4 @@ font-face {
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+}
